gitops/s3browser/s3manager-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-manager
  labels:
    app.kubernetes.io/name: s3-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: s3-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: s3-manager
    spec:
      containers:
        - name: s3-manager
          image: cloudlena/s3manager:latest
---
kind: Service
apiVersion: v1
metadata:
  name: s3-manager
spec:
  selector:
      app.kubernetes.io/name: s3-manager
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: s3-manager
spec:
  tls:
  - hosts:
      - r2.buc.sh
    secretName: cert-r2-buc-sh
  rules:
  - host: r2.buc.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: s3-manager
            port:
              name: http
